src/objects/Care_Plan_Obj_Template__c.object
<CustomObject>
    <description>When a standard care plan is created, these objectives will be copied into that plan</description>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <picklist>
            <picklistValues>
                <fullName>Drug Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcohol Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accomodation/Independent Living</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Justice and Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family and Relationships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education and Training</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Include_this_objective__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Tick to include this objective in the care plan</inlineHelpText>
        <label>Include this objective</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Objective_Note__c</fullName>
        <label>Objective Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Objective_Status__c</fullName>
        <label>Objective Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Care Plan Obj Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Area__c</columns>
        <columns>Objective_Status__c</columns>
        <columns>Priority__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Care Plan Obj Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Care Plan Obj Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>